--- a/en.html
+++ b/en.html
@@ -517,13 +517,7 @@
             Our partners:
           </h2>
           <div class="grid-container">
-            <div class="partners-container partners-container-overlay  padding-0">
-              <img
-                class="image-partners "
-                src="assets/images/partners/raza.webp"
-                alt=""
-              />
-            </div>
+            
             <div class="partners-container partners-container-overlay padding-0">
               <img
                 class="image-partners"
@@ -579,6 +573,13 @@
                 alt=""
               />
             </div>
+            <div class="partners-container partners-container-overlay  padding-0">
+              <img
+                class="image-partners "
+                src="assets/images/partners/raza.webp"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -607,7 +608,7 @@
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-mobile theme-color" theme-color></i>
                   </div>
-                  <p class="mb-0">+966 54 116 6982</p>
+                  <p class="mb-0">+966 55 116 8787</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5">
@@ -791,6 +792,11 @@
           <nav class="ln-social-icons">
             <ul class="mx-auto">
               <li>
+                <a target="_blank" href="https://twitter.com/atrnj_co"
+                  ><i class="fab fa-twitter trasparant-color"></i
+                ></a>
+              </li>
+              <li>
                 <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
                   ><i class="fab tiktok-icon"
                     ><img
@@ -828,6 +834,11 @@
           <p class="copyright-text">© 2023 ATRNJ</p>
           <nav class="icons-end">
             <ul class="mx-auto">
+              <li>
+                <a target="_blank" href="https://twitter.com/atrnj_co"
+                  ><i class="fab fa-twitter trasparant-color"></i
+                ></a>
+              </li>
               <li>
                 <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
                   ><i class="fab tiktok-icon"
