--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       >
         <div class="margin20">
           <h2
-            class="mb-4 animated title align-right-text margin-3"
+            class="mb-4 animated title align-right-text margin-3 font-almarai"
             data-animation="fadeInUp"
           >
             :خدماتنا
@@ -557,18 +557,12 @@
         data-ui="dark"
         data-navbar="navbar-light"
       >
-        <div class="container align-self-center theme-color-2">
-          <h2 class="mb-4 animated title" data-animation="fadeInUp">
-            Our partners:
+        <div class="container align-self-center theme-color-2 align-right-text ">
+          <h2 class="mb-4 animated title font-almarai" data-animation="fadeInUp">
+            :شركاؤنا
           </h2>
-          <div class="grid-container">
-            <div class="partners-container partners-container-overlay  padding-0">
-              <img
-                class="image-partners "
-                src="assets/images/partners/raza.webp"
-                alt=""
-              />
-            </div>
+          <div class="grid-container-ar">
+          
             <div class="partners-container partners-container-overlay padding-0">
               <img
                 class="image-partners"
@@ -624,6 +618,13 @@
                 alt=""
               />
             </div>
+            <div class="partners-container partners-container-overlay  padding-0">
+              <img
+                class="image-partners "
+                src="assets/images/partners/raza.webp"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -655,7 +656,7 @@
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-mobile theme-color" theme-color></i>
                   </div>
-                  <p class="mb-0">+966 54 116 6982</p>
+                  <p class="mb-0">+966 55 116 8787</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5">
@@ -839,6 +840,11 @@
           <nav class="ln-social-icons">
             <ul class="mx-auto">
               <li>
+                <a target="_blank" href="https://twitter.com/atrnj_co"
+                  ><i class="fab fa-twitter trasparant-color"></i
+                ></a>
+              </li>
+              <li>
                 <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
                   ><i class="fab tiktok-icon"
                     ><img
@@ -864,7 +870,7 @@
         </div>
       </section>
       <section
-      class="ln-section d-xl-flex black-color-dark"
+      class="ln-section d-xl-flex black-color"
       data-anchor="end"
       data-tooltip="end"
       data-ui="dark"
@@ -875,6 +881,11 @@
         <p class="copyright-text">© 2023 ATRNJ</p>
         <nav class="icons-end">
           <ul class="mx-auto">
+            <li>
+              <a target="_blank" href="https://twitter.com/atrnj_co"
+                ><i class="fab fa-twitter trasparant-color"></i
+              ></a>
+            </li>
             <li>
               <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
                 ><i class="fab tiktok-icon"
