--- a/en.html
+++ b/en.html
@@ -697,7 +697,7 @@
                 <input
                   type="hidden"
                   name="_next"
-                  value="http://ismailmahmood11.github.io/atrnj"
+                  value="https://ismailmahmood11.github.io/atrnj/en.html"
                 />
                 <input type="hidden" name="_captcha" value="false" />
               </form>
