--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                 <input
                   type="hidden"
                   name="_next"
-                  value="http://ismailmahmood11.github.io/atrnj"
+                  value="https://ismailmahmood11.github.io/atrnj/index.html"
                 />
                 <input type="hidden" name="_captcha" value="false" />
               </form>
