--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <meta
-      name="description"
-      content="atrnj website"
-    />
+    <meta name="description" content="atrnj website" />
     <!-- Libs CSS -->
     <link
       rel="stylesheet"
@@ -163,7 +160,14 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-overlay">
-                  <video id="video" class="video" loop autoplay muted playsinline>
+                  <video
+                    id="video"
+                    class="video"
+                    loop
+                    autoplay
+                    muted
+                    playsinline
+                  >
                     <source
                       src="assets/video/main-video.mp4"
                       type="video/mp4"
@@ -557,13 +561,17 @@
         data-ui="dark"
         data-navbar="navbar-light"
       >
-        <div class="container align-self-center theme-color-2 align-right-text ">
-          <h2 class="mb-4 animated title font-almarai" data-animation="fadeInUp">
+        <div class="container align-self-center theme-color-2 align-right-text">
+          <h2
+            class="mb-4 animated title font-almarai"
+            data-animation="fadeInUp"
+          >
             :شركاؤنا
           </h2>
           <div class="grid-container-ar">
-          
-            <div class="partners-container partners-container-overlay padding-0">
+            <div
+              class="partners-container partners-container-overlay padding-0"
+            >
               <img
                 class="image-partners"
                 src="assets/images/partners/gaca.jpg"
@@ -587,7 +595,7 @@
               />
             </div>
 
-            <div class="partners-container partners-container-overlay ">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/study-group.jpg"
@@ -618,9 +626,11 @@
                 alt=""
               />
             </div>
-            <div class="partners-container partners-container-overlay  padding-0">
+            <div
+              class="partners-container partners-container-overlay padding-0"
+            >
               <img
-                class="image-partners "
+                class="image-partners"
                 src="assets/images/partners/raza.webp"
                 alt=""
               />
@@ -870,47 +880,48 @@
         </div>
       </section>
       <section
-      class="ln-section d-xl-flex black-color"
-      data-anchor="end"
-      data-tooltip="end"
-      data-ui="dark"
-      data-navbar="navbar-light"
-    >
-      <div class="width-100">
-        <p class="copyright-text">All rights reserved</p>
-        <p class="copyright-text">© 2023 ATRNJ</p>
-        <nav class="icons-end">
-          <ul class="mx-auto">
-            <li>
-              <a target="_blank" href="https://twitter.com/atrnj_co"
-                ><i class="fab fa-twitter trasparant-color"></i
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
-                ><i class="fab tiktok-icon"
-                  ><img
-                    class="tiktok-icon"
-                    src="assets/images/icon/tiktok.svg"
-                    alt="" /></i
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://www.instagram.com/atrnj_co/"
-                ><i class="fab fa-instagram"></i
-              ></a>
-            </li>
-            <li>
-              <a
-                target="_blank"
-                href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"
-                ><i class="fab fa-snapchat"></i
-              ></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </section>
+        class="ln-section d-xl-flex theme-color-3"
+        data-anchor="end"
+        data-tooltip="end"
+        data-ui="dark"
+        data-navbar="navbar-light"
+      >
+        <div class="width-100">
+          <hr class="solid" />
+          <p class="copyright-text">All rights reserved</p>
+          <p class="copyright-text">© 2023 ATRNJ</p>
+          <nav class="icons-end">
+            <ul class="mx-auto">
+              <li>
+                <a target="_blank" href="https://twitter.com/atrnj_co"
+                  ><i class="fab fa-twitter trasparant-color"></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
+                  ><i class="fab tiktok-icon"
+                    ><img
+                      class="tiktok-icon"
+                      src="assets/images/icon/tiktok.svg"
+                      alt="" /></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.instagram.com/atrnj_co/"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"
+                  ><i class="fab fa-snapchat"></i
+                ></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
     </div>
 
     <!-- Libs JS -->
